[package]
name = "hentaigana_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.0"
egui = "0.27.2"
eframe = { version = "0.27.2", features = [ "default_fonts", "glow", "persistence" ] }
env_logger = "0.11.3"
serde = "1.0.203"
