[package]
name = "hentaigana_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.0"
egui = "0.27.2"
eframe = { version = "0.27.2", features = [ "default_fonts", "glow", "persistence" ] }
env_logger = "0.11.3"
serde = "1.0.203"
zstd-safe = { version = "7.1.0", features = ["experimental", "std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
log = "0.4.22"
